Fixed a spacing issue for the school pictures and the test describing my time there

--- a/css/education.css
+++ b/css/education.css
@@ -10,6 +10,10 @@
     padding: 3rem;
 }
 
+.educationSchools{
+    margin: 2rem;
+}
+
 .educationSchools .schoolPics{
     position: relative;
     top: 20px;
@@ -24,11 +28,12 @@ img{
 
 h2{
     float:none;
-    text-indent: 10px;
+    text-indent: 20px;
 }
 
 p{
     float:none;
-    text-indent: 10px;
+    position: relative;
+    right: -20px;
 }
 
